--- a/index.html
+++ b/index.html
@@ -8,5 +8,28 @@
 </head>
 <body>
     <h1> What power do you have</h1>
+    <h2> Pick A Colour</h2>
+    <button> Blue </button>
+    <button> Red </button>
+    <button> Orange </button>
+    <button> Periwinkle </button>
 </body>
+
+<body>
+    <h2> Pick A Fruit </h2>
+    <button> Dragonfruit </button>
+    <button> Strawberries </button>
+    <button> Pineapple </button>
+    <button> Watermelon </button>
+</body>
+
+<body> 
+    <h2> What's Your Favourite Season </h2>
+    <button> Summer </button>
+    <button> Spring </button>
+    <button> Autumn </button>
+    <button> Winter </button>
+</body>
+
+
 </html>
