--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <h1> What power do you have</h1>
+    <h1> What power do you have? </h1>
     <h2> Pick A Colour</h2>
     <button> Blue </button>
     <button> Red </button>
