--- a/index.html
+++ b/index.html
@@ -31,5 +31,51 @@
     <button> Winter </button>
 </body>
 
+<body> 
+    <h2> Where Would You Live? </h2>
+    <button> France </button>
+    <button> Italy </button>
+    <button> Japan </button>
+    <button> Indonesia </button>
+</body>
 
+<body> 
+    <h2> Pick A Singer </h2>
+    <button> Beyonce </button>
+    <button> Brittany Spears </button>
+    <button> Cardi B </button>
+    <button> Justin Beiber</button>
+</body>
+
+<body> 
+    <h2> Pick A Hair Colour </h2>
+    <button> Blonde </button>
+    <button> Brunette </button>
+    <button> Ginger </button>
+    <button> Black </button>
+</body>
+
+<body> 
+    <h2> What Are You Craving Out Of The Options Below? </h2>
+    <button> Pizza </button>
+    <button> Pesto Pasta </button>
+    <button> Tacos </button>
+    <button> Sushi </button>
+</body>
+
+<body> 
+    <h2> Pick A Disney Princess </h2>
+    <button> Mulan </button>
+    <button> Cinderella </button>
+    <button> Tiana </button>
+    <button> Belle </button>
+</body>
+
+<body> 
+    <h2> Pick A Dessert </h2>
+    <button> Cupcakes </button>
+    <button> Ice Cream </button>
+    <button> Chocolate Mousse</button>
+    <button> Brownies </button>
+</body>
 </html>
