--- a/country-question.html
+++ b/country-question.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h2> Where Would You Live? </h2>
-    <button> France </button>
-    <button> Italy </button>
-    <button> Japan </button>
-    <button> Indonesia </button>
+    <a href="princess-question.html"><button> France </button></a>
+    <a href="princess-question.html"><button> Italy </button></a>
+    <a href="princess-question.html"><button> Japan </button></a>
+    <a href="princess-question.html"><button> Indonesia </button></a>
 </body>
 </html>
