--- a/dessert-question.html
+++ b/dessert-question.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h2> Pick A Dessert </h2>
-    <button> Cupcakes </button>
-    <button> Ice Cream </button>
-    <button> Chocolate Mousse</button>
-    <button> Brownies </button>
+    <a href="hair-question.html"><button> Cupcakes </button>
+    <a href="hair-question.html"><button> Ice Cream </button>
+    <a href="hair-question.html"><button> Chocolate Mousse</button>
+    <a href="hair-question.html"><button> Brownies </button>
 </body>
 </html>
