--- a/food-question.html
+++ b/food-question.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h2> What Are You Craving Out Of The Options Below? </h2>
-    <button> Pizza </button>
-    <button> Pesto Pasta </button>
-    <button> Tacos </button>
-    <button> Sushi </button>
+    <a href="dessert-question.html"><button> Pizza </button></a>
+    <a href="dessert-question.html"><button> Pesto Pasta </button></a>
+    <a href="dessert-question.html"><button> Tacos </button></a>
+    <a href="dessert-question.html"><button> Sushi </button></a>
 </body>
 </html>
