--- a/fruit-question.html
+++ b/fruit-question.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h2> Pick A Fruit</h2>
-    <button> Pineapple </button>
-    <button> Watermelon </button>
-    <button> Strawberries </button>
-    <button> Dragonfruit </button>
+    <a href="season-question.html"><button> Pineapple </button></a>
+    <a href="season-question.html"><button> Watermelon </button></a>
+    <a href="season-question.html"><button> Strawberries </button></a>
+    <a href="season-question.html"><button> Dragonfruit </button></a>
 </body>
 </html>
