--- a/hair-question.html
+++ b/hair-question.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h2> Pick A Hair Colour </h2>
-    <button> Blonde </button>
-    <button> Brunette </button>
-    <button> Ginger </button>
-    <button> Black </button>
+    <a href="singer-question.html"><button> Blonde </button>
+    <a href="singer-question.html"><button> Brunette </button>
+    <a href="singer-question.html"><button> Ginger </button>
+    <a href="singer-question.html"><button> Black </button>
 </body>
 </html>
