--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1> What power do you have? </h1>
     <h2> Pick A Colour</h2>
-    <button> Blue </button>
-    <button> Red </button>
-    <button> Orange </button>
-    <button> Periwinkle </button>
+    <a href="fruit-question.html"><button> Blue </button></a>
+    <a href="fruit-question.html"><button> Red </button></a>
+    <a href="fruit-question.html"><button> Orange </button></a>
+    <a href="fruit-question.html"><button> Periwinkle </button></a>
 </body>
 </html>
