--- a/singer-question.html
+++ b/singer-question.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h2> Pick A Singer </h2>
-    <button> Beyonce </button>
-    <button> Brittany Spears </button>
-    <button> Cardi B </button>
-    <button> Justin Beiber</button>
+    <a href="country-question.html"><button> Beyonce </button></a>
+    <a href="country-question.html"><button> Brittany Spears </button></a>
+    <a href="country-question.html"><button> Cardi B </button></a>
+    <a href="country-question.html"><button> Justin Beiber</button></a>
 </body>
 </html>
