--- a/season-question.html
+++ b/season-question.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h2> What's Your Favourite Season </h2>
-    <button> Summer </button>
-    <button> Spring </button>
-    <button> Autumn </button>
-    <button> Winter </button>
+    <a href="food-question.html"><button> Summer </button></a>
+    <a href="food-question.html"><button> Spring </button></a>
+    <a href="food-question.html"><button> Autumn </button></a>
+    <a href="food-question.html"><button> Winter </button></a>
 </body>
 </html>
