--- a/teleportation.html
+++ b/teleportation.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1> TELEPORTATION </h1>
+    <img src="teleport.jpeg" alt="teleport">
     <p> You got teleportation! 
         You are everywhere yet nowhere. You're either very early or fashionably late to functions but never on time.
         You always are visiting cool, new places that are to die for.
