--- a/mind-reading.html
+++ b/mind-reading.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1> MIND READING </h1>
+    <img src="Minds.png" alt="MIND">
     <p> You got mind reading!
         You are quick, clever and empathetic. 
         You have a great understanding of different concepts and philosophical questions.
