--- a/super-strength.html
+++ b/super-strength.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1> SUPER STRENGTH </h1>
+   <h1> SUPER STRENGTH </h1>
+   <img src="strong lady.png" alt="strong">
     <p> You got super strength! 
         You are hot headed and witty. You love a good debate and anything that involves you getting into an argument.
         You don't mind getting your hands dirty to have some fun and your favourite thing to do is go exercise.
