--- a/fruit-question.html
+++ b/fruit-question.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h2> Pick A Fruit</h2>
-    <a href="season-question.html"><button> Pineapple </button></a>
+    <a href="season-question.html"><button onclick="updateAnswer('fruit', 'pineapple', 'mindReading')"> Pineapple </button></a>
     <a href="season-question.html"><button> Watermelon </button></a>
     <a href="season-question.html"><button> Strawberries </button></a>
     <a href="season-question.html"><button> Dragonfruit </button></a>
+    <script src="./records.js"></script>
 </body>
 </html>
