--- a/country-question.html
+++ b/country-question.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h2> Where Would You Live? </h2>
-    <a href="princess-question.html"><button> France </button></a>
-    <a href="princess-question.html"><button> Italy </button></a>
-    <a href="princess-question.html"><button> Japan </button></a>
-    <a href="princess-question.html"><button> Indonesia </button></a>
+    <a href="princess-question.html"><button onclick="updateAnswer('teleportation')"> France </button></a>
+    <a href="princess-question.html"><button onclick="updateAnswer('mindReading')"> Italy </button></a>
+    <a href="princess-question.html"><button onclick="updateAnswer('shapeShifting')"> Japan </button></a>
+    <a href="princess-question.html"><button onclick="updateAnswer('superStrength')"> Indonesia </button></a>
+    <script src="./records.js"></script>
 </body>
 </html>
