--- a/dessert-question.html
+++ b/dessert-question.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h2> Pick A Dessert </h2>
-    <a href="hair-question.html"><button> Cupcakes </button>
-    <a href="hair-question.html"><button> Ice Cream </button>
-    <a href="hair-question.html"><button> Chocolate Mousse</button>
-    <a href="hair-question.html"><button> Brownies </button>
+    <a href="hair-question.html"><button onclick="updateAnswer('teleportation')"> Cupcakes </button>
+    <a href="hair-question.html"><button onclick="updateAnswer('mindReading')"> Ice Cream </button>
+    <a href="hair-question.html"><button onclick="updateAnswer('superStrength')"> Chocolate Mousse</button>
+    <a href="hair-question.html"><button onclick="updateAnswer('shapeShifting')"> Brownies </button>
+    <script src="./records.js"></script>
 </body>
 </html>
