--- a/food-question.html
+++ b/food-question.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h2> What Are You Craving Out Of The Options Below? </h2>
-    <a href="dessert-question.html"><button> Pizza </button></a>
-    <a href="dessert-question.html"><button> Pesto Pasta </button></a>
-    <a href="dessert-question.html"><button> Tacos </button></a>
-    <a href="dessert-question.html"><button> Sushi </button></a>
+    <a href="dessert-question.html"><button onclick="updateAnswer('shapeShifting')"> Pizza </button></a>
+    <a href="dessert-question.html"><button onclick="updateAnswer('superStrength')"> Pesto Pasta </button></a>
+    <a href="dessert-question.html"><button onclick="updateAnswer('mindReading')"> Tacos </button></a>
+    <a href="dessert-question.html"><button onclick="updateAnswer('teleportation')"> Sushi </button></a>
+    <script src="./records.js"></script>
 </body>
 </html>
