--- a/hair-question.html
+++ b/hair-question.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h2> Pick A Hair Colour </h2>
-    <a href="singer-question.html"><button> Blonde </button>
-    <a href="singer-question.html"><button> Brunette </button>
-    <a href="singer-question.html"><button> Ginger </button>
-    <a href="singer-question.html"><button> Black </button>
+    <a href="singer-question.html"><button onclick="updateAnswer('mindReading')"> Blonde </button>
+    <a href="singer-question.html"><button onclick="updateAnswer('superStrength')"> Brunette </button>
+    <a href="singer-question.html"><button onclick="updateAnswer('teleportation')"> Ginger </button>
+    <a href="singer-question.html"><button onclick="updateAnswer('shapeShifting')"> Black </button>
+    <script src="./records.js"></script>
 </body>
 </html>
