--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <h1> What power do you have? </h1>
+    <p> Take our quiz to figure out what cool superpower you have!</p>
     <h2> Pick A Colour</h2>
-    <a href="fruit-question.html"><button onclick="updateAnswer('colour', 'blue', 'mindReading')"> Blue </button></a>
-    <a href="fruit-question.html"><button> Red </button></a>
-    <a href="fruit-question.html"><button> Orange </button></a>
-    <a href="fruit-question.html"><button> Periwinkle </button></a>
+    <a href="fruit-question.html"><button onclick="updateAnswer('shapeShifting')"> Blue </button></a>
+    <a href="fruit-question.html"><button onclick="updateAnswer('superStrength')"> Red </button></a>
+    <a href="fruit-question.html"><button onclick="updateAnswer('teleportation')"> Orange </button></a>
+    <a href="fruit-question.html"><button onclick="updateAnswer('mindReading')"> Periwinkle </button></a>
+    <script src="./index.js"></script>
     <script src="./records.js"></script>
 </body>
 </html>
