--- a/season-question.html
+++ b/season-question.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h2> What's Your Favourite Season </h2>
-    <a href="food-question.html"><button> Summer </button></a>
-    <a href="food-question.html"><button> Spring </button></a>
-    <a href="food-question.html"><button> Autumn </button></a>
-    <a href="food-question.html"><button> Winter </button></a>
+    <a href="food-question.html"><button onclick="updateAnswer('superStrength')"> Summer </button></a>
+    <a href="food-question.html"><button onclick="updateAnswer('shapeShifting')"> Spring </button></a>
+    <a href="food-question.html"><button onclick="updateAnswer('teleportation')"> Autumn </button></a>
+    <a href="food-question.html"><button onclick="updateAnswer('mindReading')"> Winter </button></a>
+    <script src="./records.js"></script>
 </body>
 </html>
