--- a/princess-question.html
+++ b/princess-question.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h2> Pick A Disney Princess </h2>
-    <button> Mulan </button>
-    <button> Cinderella </button>
-    <button> Tiana </button>
-    <button> Belle </button>
+    <button onclick="findUsersPower('superStrength')"> Mulan </button>
+    <button onclick="findUsersPower('teleportation')"> Cinderella </button>
+    <button onclick="findUsersPower('shapeShifting')"> Tiana </button>
+    <button onclick="findUsersPower('mindReading')"> Belle </button>
+    <script src="./records.js"></script>
 </body>
 </html>
