--- a/singer-question.html
+++ b/singer-question.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h2> Pick A Singer </h2>
-    <a href="country-question.html"><button> Beyonce </button></a>
-    <a href="country-question.html"><button> Brittany Spears </button></a>
-    <a href="country-question.html"><button> Cardi B </button></a>
-    <a href="country-question.html"><button> Justin Beiber</button></a>
+    <a href="country-question.html"><button onclick="updateAnswer('mindReading')"> Beyonce </button></a>
+    <a href="country-question.html"><button onclick="updateAnswer('superStrength')"> Brittany Spears </button></a>
+    <a href="country-question.html"><button onclick="updateAnswer('shapeShifting')"> Cardi B </button></a>
+    <a href="country-question.html"><button onclick="updateAnswer('teleportation')"> Justin Beiber</button></a>
+    <script src="./records.js"></script>
 </body>
 </html>
