--- a/super-strength.html
+++ b/super-strength.html
@@ -9,6 +9,9 @@
 <body>
    <h1> SUPER STRENGTH </h1>
    <img src="strong lady.png" alt="strong">
+   <h2> https://creativecommons.org/licenses/by-nc-sa/3.0/ 
+    No changes were made to the image above.
+   </h2>
     <p> You got super strength! 
         You are hot headed and witty. You love a good debate and anything that involves you getting into an argument.
         You don't mind getting your hands dirty to have some fun and your favourite thing to do is go exercise.
