--- a/mind-reading.html
+++ b/mind-reading.html
@@ -9,6 +9,9 @@
 <body>
     <h1> MIND READING </h1>
     <img src="Minds.png" alt="MIND">
+    <h2> https://creativecommons.org/licenses/by-nd/4.0/deed.en 
+        No changes were made to the image above.
+    </h2>
     <p> You got mind reading!
         You are quick, clever and empathetic. 
         You have a great understanding of different concepts and philosophical questions.
