--- a/shapeshifting.html
+++ b/shapeshifting.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1> SHAPESHIFTING </h1>
+    <img src="shapeshifter.jpeg" alt="shifter">
+    <h2> https://creativecommons.org/licenses/by-nc-nd/3.0/ 
+        No changes were made to the image above.
+    </h2>
     <p> You got shapeshifting! 
         You are sly and sneaky. You can easily get away with things because of your charming personality and great humour. 
         You tend to slide in and out of situations and fit in any group settings.
